--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
         <section id="beast" class="hidden">
             <div class="mainWidth">
                 <div class="cave">
+                    <div id="entrance">
+                        <div id="playerDead">Twój śmiałek poległ, czy chcesz podjąć wyzwanie jeszcze raz?</div>
+                        <div id="callTheDragon">Zawołaj smoka</div>
+                    </div>
                     <div id="dragon">
                         <div id="dbody"></div>
                         <div class="crosshair" data-chance="0.05" data-points="10"></div>
@@ -71,10 +75,16 @@
                         <div class="crosshair" data-chance="0.2" data-points="4"></div>
                         <div id="drightWing"></div>
                         <div class="crosshair" data-chance="0.9" data-points="1"></div>
+                        <div id="dragonHpBar">
+                            <div id="dragonHpLeft"></div>
+                        </div>
                     </div>
                     <div id="defend">
                         <div id="shield"></div>
                         <div id="dodge"></div>
+                        <div id="playerHpBar">
+                            <div id="playerHpLeft"></div>
+                        </div>
                     </div>
                 </div>
             </div>
