--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="js/app.js"></script>    
     </head>
     <body>
+<!--        <div id="bodyBckgrnd"></div>-->
         <div id="fade"></div>
         
 <!--Nawigacja-->
@@ -28,8 +29,17 @@
         <section id="tab_1" class="tabs">
             <div class="mainWidth">
                 <div class="paper">
+                    <h3>15. lipca 2016 r.</h3>
+                    <p>Opublikowano wersję 1.0:
+                    <br>- dodano kowala i system ekwipunku dla bohaterów,
+                    <br>- usprawniono silnik gry, zwiększając szanse na trafienie poszczególnych części ciała smoka,
+                    <br>- zwiększono zręczność wojownika i rycerza,
+                    <br>- skrócono odstępy pomiędzy atakami smoka i gracza,
+                    <br>- nieznacznie wydłużono czas wyświetlania celowników,
+                    <br>- dodano animowane tło dla przeglądarek Chrome i IE.</p>
+                    <br>
                     <h3>14. lipca 2016 r.</h3>
-                    <p>Symulator walki ze smokiem został udostępniony w bardzo podstawowej wersji i mogą pojawić się nieznaczne trudności w jego działaniu na przeglądarkach innych niż Chrome. Gra na razie nie jest obsługiwana na urządzeniach mobilnych.
+                    <p>Symulator walki ze smokiem został udostępniony w bardzo podstawowej wersji i mogą pojawić się nieznaczne trudności w jego działaniu na przeglądarkach innych niż Chrome. Gra na razie nie jest obsługiwana na rozdzielczościach węższych niż 1200px.</p>
                 </div>
             </div>
         </section>
@@ -232,15 +242,15 @@
                     </div>
                     <div id="dragon">
                         <div id="dbody"></div>
-                        <div class="crosshair" data-chance="0.05" data-points="10"></div>
+                        <div class="crosshair" data-chance="0.1" data-points="10"></div>
                         <div id="dhead"></div>
-                        <div class="crosshair" data-chance="0.3" data-points="3"></div>
+                        <div class="crosshair" data-chance="0.4" data-points="3"></div>
                         <div id="dhand"></div>
-                        <div class="crosshair" data-chance="0.7" data-points="2"></div>
+                        <div class="crosshair" data-chance="0.8" data-points="2"></div>
                         <div id="dleftWing"></div>
-                        <div class="crosshair" data-chance="0.2" data-points="4"></div>
+                        <div class="crosshair" data-chance="0.3" data-points="4"></div>
                         <div id="drightWing"></div>
-                        <div class="crosshair" data-chance="0.9" data-points="1"></div>
+                        <div class="crosshair" data-chance="0.95" data-points="1"></div>
                         <div id="dragonHpBar">
                             <div id="dragonHpLeft"></div>
                             <div class="nameBack"></div>
