--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Ultimate Dragon Slayer</title>
         <link rel="stylesheet" type="text/css" href="scss/style.css">
         <script src="js/jquery-2.2.4.min.js"></script>
+        <script src="js/nanoscroller.js"></script>
         <script src="js/app.js"></script>    
     </head>
     <body>
@@ -28,7 +29,8 @@
 <!--Strona główna--> 
         <section id="tab_1" class="tabs">
             <div class="mainWidth">
-                <div class="paper">
+                <div class="paper nano">
+                    <div class="content">
                     <h3>15. lipca 2016 r.</h3>
                     <p>Opublikowano wersję 1.0:
                     <br>- dodano kowala i system ekwipunku dla bohaterów,
@@ -40,6 +42,7 @@
                     <br>
                     <h3>14. lipca 2016 r.</h3>
                     <p>Symulator walki ze smokiem został udostępniony w bardzo podstawowej wersji i mogą pojawić się nieznaczne trudności w jego działaniu na przeglądarkach innych niż Chrome. Gra na razie nie jest obsługiwana na rozdzielczościach węższych niż 1200px.</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -47,7 +50,8 @@
 <!--Historia i instrukcja gry-->
         <section id="tab_2" class="tabs">
             <div class="mainWidth">
-                <div class="paper">
+                <div class="paper nano">
+                    <div class="content">
                     <p>To zwyczajna historia, która mogła przydarzyć się każdemu z nas. Gdy do spokojnej i malowniczej krainy przybywa smok, jej mieszkańcy przeczuwają, że potworowi nie należy ufać. Już pierwszego dnia swojego pobytu w nowym miejscu smok rozpala do czerwoności jedną z tutejszych wiosek. Ten występek sprawia, że ludzie zaczynają traktować bestię z dystans<del>em</del><ins>u</ins>, najczęściej strzałami, nachodzą ją w nocy z widłami i obrzucają obelżywymi tekstami.
                     <br>
                     <br>
@@ -85,6 +89,7 @@
                     <br>
                     <strong>Skrzydło</strong> smoka jest łatwym celem, jednak istnieje spore prawdopodobieństwo, że bestia nawet go nie odczuje.
                     </p>
+                    </div>
                 </div>
             </div>
         </section>
