--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <br>- zwiększono zręczność wojownika i rycerza,
                     <br>- skrócono odstępy pomiędzy atakami smoka i gracza,
                     <br>- nieznacznie wydłużono czas wyświetlania celowników,
-                    <br>- dodano animowane tło dla przeglądarek Chrome i IE.</p>
+                    <br>- dodano animowane tło dla przeglądarek Chrome, Safari i IE.</p>
                     <br>
                     <h3>14. lipca 2016 r.</h3>
                     <p>Symulator walki ze smokiem został udostępniony w bardzo podstawowej wersji i mogą pojawić się nieznaczne trudności w jego działaniu na przeglądarkach innych niż Chrome. Gra na razie nie jest obsługiwana na rozdzielczościach węższych niż 1200px.</p>
