work on tablet resolution

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <br>
                     <br>Samo kliknięcie celownika nie oznacza jeszcze ataku zakończonego trafieniem i zadaniem obrażeń. Trudność trafienia zależy od części ciała smoka, która została zaatakowana.
                     <br>
-                    <strong>Brzuch</strong> smoka jest pokryty twardą skórą i łuskami, jednak w paru miejscach łuski odpadły, odsłaniając jego ciało. To barszo wrażliwe punkty, choć trafienie w nie graniczy z cudem.
+                    <strong>Brzuch</strong> smoka jest pokryty twardą skórą i łuskami, jednak w paru miejscach łuski odpadły, odsłaniając jego ciało. To bardzo wrażliwe punkty, choć trafienie w nie graniczy z cudem.
                     <br>
                     <strong>Głowa</strong> smoka pozostaje w ciągłym ruchu i trudno jest ją zaatakować, gdy po drodze czekają na śmiałka łapy bestii. Niemniej dobrze wyprowadzony cios może znacząco przybliżyć smoka do kresu jego ziemskiej wędrówki.  
                     <br>
