shop little upgrade

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                          <div class="slot shield" data-type="shield" data-price="700" id="item_2">
                              <img src="images/shield_1.png">
                              <div class="description">
-                                 Ciężka, ale solidna krasnoludzka tarcza znaleziona w ruinach Wilczego Leża na poudniu. Oby przyniosła Ci więcej szczęścia, niż poprzedniemu właścicielowi.
+                                 Ciężka, ale solidna krasnoludzka tarcza znaleziona w ruinach Wilczego Leża na południu. Oby przyniosła Ci więcej szczęścia, niż poprzedniemu właścicielowi.
                                  <p>Cena: 700 monet</p>
                              </div>
                              <a class="moveBtn">Kup</a>
