add responsible character menu for tablets

--- a/index.html
+++ b/index.html
@@ -112,18 +112,27 @@
                     <div id="barbarian" class="character">
                         <input type="radio" name="hero" value="barbarian" id="barbFight">
                         <label for="barbFight">
+                        <img src="images/barbface.png" class="face">
+                        <p>Wojownik</p>
+                        <img src="images/ikona.png" class="chosen">
                         </label>
                         <div class="shadow"></div>
                     </div>
                     <div id="knight" class="character">
                         <input type="radio" name="hero" value="knight" id="knightFight">
                         <label for="knightFight">
+                        <img src="images/knightface.png" class="face">
+                        <p>Rycerz</p>
+                        <img src="images/ikona.png" class="chosen">
                         </label>
                         <div class="shadow"></div>
                     </div>
                     <div id="rogue" class="character">
                         <input type="radio" name="hero" value="rogue" id="rogFight">
                         <label for="rogFight">
+                        <img src="images/rogface.png" class="face">
+                        <p>Łowca</p>
+                        <img src="images/ikona.png" class="chosen">
                         </label>
                         <div class="shadow"></div>
                     </div>
